--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Pool Home
-description: Bookmark this to keep an eye on my project updates!
+description: Handy Pool Players Items
