--- a/_config.yml
+++ b/_config.yml
@@ -1,54 +1,214 @@
-# Welcome to Jekyll!
+# Site-wide settings
+# ------------------
 #
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
+title: TopShots ME
+author:
+  name: Charles Peterson
+  email: webmaster@topshots.me
 #
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
-title: Pool Home
-email: your-email@example.com
+# The `>` after `description:` means to ignore line-breaks until next key. If
+#   you wish to omit the line-break after the end of text, use `>-` instead.
+# description: >
+#   Write an awesome description for your new site here. You can edit this line
+#   in _config.yml. It will appear in your document head meta (for Google search
+#   results) and in your feed.xml site description.
 description: >- # this means to ignore newlines until "baseurl:"
   Handy Pool Players Items
   Links and Resources for Pool Players
 baseurl: "" # the subpath of your site, e.g. /blog
+
+# Build settings
+# --------------
+#
+# If you wish to use the gem-version of Minima with or without a Gemfile, use
+#   the following setting:
+# theme: minima
+#
+# **OR** if you wish to use the theme directly from the GitHub repository by
+#   bypassing a Gemfile, use the following setting instead.
+#   It is best that you lock to a particular commit and update if uptream changes
+#   do not affect your site adversely.
+# remote_theme: jekyll/minima@d4d779a
+#
+# Minima requires the following plugins:
+# plugins:
+#  - jekyll-feed
+#  - jekyll-seo-tag
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-paginate-v2
+# Pagination (jekyll-paginate-v2) defaults
+pagination:
+  enabled: true
+  per_page: 10
+  sort_field: 'date'
+  sort_reverse: true
+
+autopages:
+  enabled: true
+  collections:
+    enabled: true
+    layouts:
+      - collection_index.html
+    permalink: '/collections/:coll/'
+    slugify:
+      mode: 'pretty'
+      case: true
+  tags:
+    enabled: true
+    layouts:
+      - tag_index.html
+    title: '#:tag'
+    permalink: '/tags/:tag/'
+    silent: false
+    slugify:
+      mode: 'pretty'
+      case: true
+  categories:
+    enabled: true
+    layouts:
+      - category_index.html
+    permalink: '/categories/:cat/'
+    slugify:
+      mode: 'pretty'
+      case: true
+
+
+#
+# Uncomment the following setting if you wish to disable deprecation warnings
+#   from newer versions of sass converter. Adapt as required.
+# sass:
+#   quiet_deps: true
+#   silence_deprecations: [import]
+sass:
+  quiet_deps: true
+  silence_deprecations: [import]
+
+
+# Minima-specific settings (applicable to Minima v3 and above only)
+# -----------------------------------------------------------------
+#
+#  *All described config keys below should be nested under the top-level
+#   `minima` key.*
+# minima:
+minima:
+#   Minima skin selection. Available skins are:
+#     * classic            Default, light color scheme.
+#     * dark               Dark variant of the classic skin.
+#     * auto               Adaptive skin based on the classic and dark skins.
+#     * solarized-light    Light variant of solarized color scheme.
+#     * solarized-dark     Dark variant of solarized color scheme.
+#     * solarized          Adaptive skin for solarized color scheme skins.
+#   skin: auto
+  skin: auto
+#
+#   Specific pages for site navigation.
+#     If you wish to link only specific pages in the site-navigation, use this
+#     and list the `path` property (as represented via Liquid) of the pages in
+#     the order they should be rendered.
+#   nav_pages:
+#     - about.md
+  nav_pages:
+    - posts.md
+    - docs.md
+#
+#   Set to `true` to show excerpts on the homepage.
+#   show_excerpts: false
+#
+#   Minima date format.
+#     The default value is "%b %d, %Y" (e.g. Nov 14, 2023).
+#     Refer to https://shopify.github.io/liquid/filters/date/ for valid values
+#   date_format: "%b-%d-%Y"
+#
+#   Social Media Links.
+#     Renders icons via Font Awesome Free webfonts CDN, based on ordered list of
+#     entries. Valid entry keys:
+#       * title    Tooltip rendered on hovering over icon.
+#       * icon     Font Awesome icon id. `github` corresponds to `fa-github`.
+#       * url      Full URL of social profile.
+#   social_links:
+#     - title: Minima Theme repository at GitHub
+#       icon: github
+#       url: "https://github.com/jekyll/minima"
+#     - title: Jekyll at X (formerly Twitter)
+#       icon: x-twitter
+#       url: "https://x.com/jekyllrb"
+#
+#   Hide syndication feed subscription link.
+#     RSS / Atom feed link is always rendered as the last item of social-links
+#     list. Set below key to `true` to not have the link to feed rendered as
+#     part of social-links list.
+#   hide_site_feed_link: false
+
 url: "https://topshots.me" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Artistan
 github_username:  Artistan
 
+collections:
+  docs:
+    name: Documentation
+    output: true
+    sort_by: date
+    permalink: collection-:title
+  posts:
+    name: Posts
+    output: true
+    sort_by: date
+    permalink: collection-:title
+tags:
+  pool:
+    name: Pool
+  scoring:
+    name: Scoring
+  billiards:
+    name: Billiards
+categories:
+   pool:
+     name: Pool
+   billiards:
+     name: Billiards
+   scoring:
+     name: Scoring
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "default"
+  -
+    scope:
+      path: ""
+      type: "posts" # previously `page` in Jekyll 2.2.
+    values:
+      layout: "post" # overrides previous default layout
+      category: "posts"
+  -
+    scope:
+      path: ""
+      type: "docs" # previously `page` in Jekyll 2.2.
+    values:
+      layout: "page" # overrides previous default layout
+      category: "documentation"
+
 # Build settings
 theme: minima
-plugins:
-  - jekyll-feed
+show_drafts: false
 
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
 # the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+exclude:
+  - .sass-cache/
+  - .jekyll-cache/
+  - gemfiles/
+  - Gemfile
+  - Gemfile.lock
+  - node_modules/
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
