Integrate Bootstrap and Font Awesome for styled UI components
- Updated `index.html` to include Bootstrap CSS/JS and Font Awesome.
- Replaced placeholder content in `app.component.html` with interactive components (navbar, cards).
- Enhanced `angular.json` with prerendered routes ("/", "/about", "/contact").

--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,10 @@
               "src/styles.scss"
             ],
             "scripts": [],
-            "outputMode": "static"
+            "outputMode": "static",
+            "prerender": {
+              "routes": ["/", "/about", "/contact"]
+            }
           },
           "configurations": {
             "production": {
