Refactor SCSS imports and update prerender configuration
- Replaced `@import` with `@use` for Bootstrap in `styles.scss`.
- Simplified `angular.json` by enabling `prerender` with a boolean flag.

--- a/angular.json
+++ b/angular.json
@@ -37,9 +37,7 @@
             ],
             "scripts": [],
             "outputMode": "static",
-            "prerender": {
-              "routes": ["/", "/about", "/contact"]
-            }
+            "prerender": true
           },
           "configurations": {
             "production": {
